# echo-docs

./: README.md  index.md  pyproject.toml
.github/workflows/: notify-parent.yml
concepts/: architecture.md  plugin-system.md  project-structure.md
contributing/: code-style.md  development.md  testing.md
deployment/: environment.md  production.md
getting-started/: notices.md  quick-start.md
plugins/: first-plugin.md  overview.md
