[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "echo-docs"
version = "1.0.0"
description = "Echo Docs - Documentation for Echo AI Framework"
authors = [
    { name = "Jonas Kahn", email = "me@ifelse.one" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
keywords = ["documentation", "mkdocs", "echo-ai", "ai", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
    "pymdown-extensions>=10.0.0",
]

[project.urls]
homepage = "https://github.com/jonaskahn/echo"
documentation = "https://jonaskahn.github.io/echo"
repository = "https://github.com/jonaskahn/echo-docs.git"
issues = "https://github.com/jonaskahn/echo/issues"
